# Human-Tracking-in-C-

./: CMakeLists.txt  LICENSE  README.md  dconfig
app/: CMakeLists.txt  main.cpp
docs/html/: annotated.html  app_2main_8cpp.html  app_2main_8cpp__incl.map  app_2main_8cpp__incl.md5  app_2main_8cpp_source.html  classDetectionClass-members.html  classDetectionClass.html  classDisplayClass-members.html  classDisplayClass.html  classTrackingClass-members.html  classTrackingClass.html  classTrackingClass__coll__graph.map  classTrackingClass__coll__graph.md5  classes.html  detection_2src_8cpp.html  detection_2src_8cpp__incl.map  detection_2src_8cpp__incl.md5  detection_2src_8cpp_source.html  detection_8hpp.html  detection_8hpp__dep__incl.map  detection_8hpp__dep__incl.md5  detection_8hpp__incl.map  detection_8hpp__incl.md5  detection_8hpp_source.html  dir_000000_000002.html  dir_000001_000002.html  dir_000004_000003.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_3795f95f7a681da1d406fb29e22d0af3.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.map  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.md5  dir_81c2ea9506fe977e2be2eb7e0c2253b9.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_faccc49e7f3e9f94bbc8053a697517b8.html  dir_faccc49e7f3e9f94bbc8053a697517b8_dep.map  dir_faccc49e7f3e9f94bbc8053a697517b8_dep.md5  (+38 more)
docs/latex/: annotated.tex  (+28 more)
libs/: CMakeLists.txt
libs/detection/: CMakeLists.txt  detection.hpp  src.cpp
libs/tracking/: CMakeLists.txt  src.cpp  tracking.hpp
results/: Hardware Unit test passing.odt  cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp
(+33 files in other folders)
